[project]
name = "pyrise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.23.0",
    "scikit-image>=0.19.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
arpls = [
    "pybaselines>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrise"]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
]
